# ides

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  env-template  infra.tf
.github/workflows/: ci_cd.yml
.sqlx/: query-9fd6b5b119b3cf55b77488cefb67d8ca20ab4efc669e91f96a430e8352c017d2.json
create_admin/: Cargo.toml
create_admin/src/: main.rs
create_token/: Cargo.toml
create_token/.sqlx/: query-70d7c707e5be003a5cbd408db58803e263da08f86f253d98d10258aa377a6965.json
create_token/src/: main.rs
ides/: Cargo.toml
ides/.sqlx/: query-065878cb7d8c848365bfa774c6541f3f8c39accc11cbf3c2260e89ef95adad0b.json  query-116bc7ff8fdf81446a37a2c662be19037e7efcb70e2385a51a24534c925e2b0e.json  query-29266b66bd717425303af089c6d92d210feaf78d83ed982220dbe3df9e4905bd.json  query-2c0f35e07f45ba5e878a6613b5368f22ac19c22ca9732dc752bdcf8f47983127.json  query-40d64957c7162a82a5a2582bfa98d52ea8cfdd46af7c6c82f1fff6264760bebd.json  query-5063fe470e9b2ceb6c76183deab53f2c9d57e293e34f66bf3c2297225dfce0a4.json  query-609e03ef90e1f3aff386e81c2f7a19e0bb0c39c677937c4b24476bd5571a8005.json  query-6a70bbcf375aac2b9389b5a18b8253612ff4cf7edad5b3b93cdd3e9c9219c75d.json  query-a28b1c1cee9d04427ecb5379b536de74bbc9d56daf7b908ce8622f393801a2a1.json  (+1 more)
ides/src/: auth.rs  bytes.rs  (+6 more)
migrations/: 02_tokens.sql  04_book.sql
scripts/: download_htmx.sh  get_prod_database_url.bash  lint_dbg.sh
src/: components.rs  controllers.rs  db_ops.rs  error.rs  htmx.rs  main.rs  models.rs  prelude.rs  routes.rs  smtp.rs  static.rs
website/: Cargo.toml  package.json  pnpm-lock.yaml  tailwind.css
(+53 files in other folders)
